--- a/src/pages/Carrito.css
+++ b/src/pages/Carrito.css
@@ -1,24 +1,55 @@
 .carrito-layout{
     display: flex;
-    gap: 30px
+    gap: 30px;
 }
 
 .carrito-grid{
     display:grid;
-    border: solid red;
     grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
     gap: 30px;
 }
 
 .carrito-container{
-    display: flex;
 }
 
 .carrito-aside{
     width: 300px;
-    flex-shrink: 0;
-    border-left: 1px solid #ccc;
-    border: solid blue;
+    background-color: var(--color-card);
+    border-radius: 12px;
+    display: flexbox;
+    justify-content: center;
+    transition: box-shadow 0.3s;
+}
+
+.carrito-aside:hover{
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.carrito-aside h1{
+    margin-left: 20px;
+}
+
+.carrito-card {
+    margin-left: 20px;
+    width: 220px;
+    background-color: #30364e;
+    border: solid var(--color-accent);
+    border-radius: 10px;
+    padding: 0px 0px 0px 12px;
+    display: flex;
+    gap: 4px;
+    flex-direction: column;
+    margin-bottom: 10px;
+    position: relative;
+    transition: border 0.3s;
+}
+
+.carrito-card:hover {
+    border: solid white;
+}
+
+.carrito-card p{
+    margin: 2px;
 }
 
 .carrito-grid article {
@@ -26,5 +57,45 @@
     background-color: var(--color-card);
     padding: 1rem;
     text-align: center;
+    transition: box-shadow 0.3s, transform 0.3s, border 0.8s;
+}
 
+.carrito-grid article:hover {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    transform: translateY(-3px);
+    border: 1px solid var(--color-accent);
+}
+
+.carrito-img {
+    width: 40px;
+    display: flex;
+    align-self: flex-end;
+    position: absolute;
+    margin: 14px 20px 0 0;
+}
+
+.carrito-total {
+    margin-left: 20px;
+    display: row;
+}
+
+.carrito-total p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: var(--color-accent);
+    font-weight: bold;
+}
+
+.btn-pagar {
+    margin-top: 20px;
+    margin-left: 65px;
+    background-color: var(--color-card);
+    color: var(--color-text-primary);
+    border: none;
+    transition: color 0.3s;
+    font-weight: bold;
+}
+
+.btn-pagar:hover{
+    color: var(--color-accent);
 }
