--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -43,3 +43,11 @@
   color: var(--color-accent);
   box-shadow: inset 0 -2px 0 var(--color-accent);
 }
+
+.header-img {
+  height: 69px;
+  display: flex;
+  position: absolute;
+  top: 10px;
+  left: 400px;
+}
