--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,13 +5,14 @@
 }
 
 .banner {
+  display: flexbox;
   padding: 20px;
-  text-align: center;
   border-bottom: 1px solid var(--color-card);
 }
 
 .banner h1 {
   margin: 0;
+  text-align: center;
   font-size: 2rem;
   color: var(--color-text-primary);
 }
@@ -46,8 +47,5 @@
 
 .header-img {
   height: 69px;
-  display: flex;
-  position: absolute;
-  top: 10px;
-  left: 400px;
+  float: left;
 }
