--- a/src/pages/Registrarse.css
+++ b/src/pages/Registrarse.css
@@ -14,7 +14,7 @@
     font-weight: bold;
 }
 
-input[type=text], input[type=password]{
+input[type=text], input[type=password], input[type=email]{
     width: 100%;
     padding: 12px 20px;
     margin-top: 4px;
@@ -93,3 +93,25 @@ input[name=remember]{
   margin-top: 12px;
   font-weight: 600;
 }
+
+.password-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.password-wrapper input {
+  width: 100%;
+  padding-right: 2.2rem;
+}
+.toggle-password {
+  position: absolute;
+  right: 0.5rem;
+  background: transparent;
+  border: none;
+  color: #ccc;
+  cursor: pointer;
+  font-size: 1.2rem;
+  top: 39%;
+    transform: translateY(-50%);
+}
+.toggle-password:hover { color: #fff; }
